traefik/middleware-headers.yaml

apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: response-headers        # Choose a name
  namespace: zomato-app
spec:
  headers:
    customResponseHeaders:
      X-Proxied-By: "traefik-gateway-api"
      X-Proxy-Server: "traefik"
      Access-Control-Allow-Origin: "*"
      Access-Control-Allow-Methods: "GET, POST, OPTIONS"
