traefik/middleware-sslredirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: zomato-app
spec:
  redirectScheme:
    scheme: https
    permanent: true
