traefik/httproute-by-hostname.yaml

apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zomato-route
  namespace: zomato-app
spec:
  parentRefs:
  - name: gateway-api

    kind: Gateway
  hostnames:
  - zomato-app.com
  rules:
  - filters:
    - type: ExtensionRef
      extensionRef:
        group: traefik.io
        kind: Middleware
        name: response-headers    # ← MUST match the middleware name above
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /
    backendRefs:
    - name: zomato-app-service
      port: 80
      weight: 1
